--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Whisper Bot",
+  "name": "Rosamol ❤️",
   "description": "Telegram bot to send whispers",
-  "logo": "https://telegra.ph/file/3c4c427a5209208cd3f85.jpg",
+  "logo": "https://telegra.ph/file/8a1ea7c9f16a3259f8e35.jpg",
   "keywords": [
     "telegram",
     "bot",
